[package]
name = "ac-runtime"
version = "0.1.0"
authors = ["Patract <https://github.com/patractlabs>"]
edition = "2018"

[dependencies]
thiserror = "1.0.21"
futures01 = { package = "futures", version = "0.1.29" }
futures = { version = "0.3.4", features = ["compat"] }
rand = "0.7.3"
parking_lot = "0.11.1"
lazy_static = "1.4.0"
log = "0.4.11"
futures-timer = "3.0.1"
wasm-timer = "0.2"
exit-future = "0.2.0"
pin-project = "1.0.4"
hash-db = "0.15.2"
serde = "1.0.101"
serde_json = "1.0.41"
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive", "full"] }

tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
serde_bytes = "0.11"
hex = "0.4.3"
arc-swap = "1.2.0"
hashbrown = { version = "0.9", features = ["inline-more"] }
async-trait = "0.1.42"

sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-externalities = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-utils = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-version = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-session = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sp-wasm-interface = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-client-db = { git = "https://github.com/paritytech/substrate", branch="polkadot-v0.9.2",  default-features = false }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-chain-spec = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
sc-light = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }

prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
tracing = "0.1.25"
tracing-futures = { version = "0.2.4" }

frame-executive = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }
pallet-babe = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.2" }